--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
-$GIT_DIR/build/
+$GIT_DIR/build
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
