--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 $GIT_DIR/build
 build/
-build/Debug
-build/x64/Debug
+build/Debug/
+build/x64/Debug/
 CMakeLists.txt.user
 CMakeCache.txt
 CMakeFiles
